src/objects/Relationship_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Allows people to chose between different types of relationship hierarchies.</description>
    <fields>
        <fullName>DISABLE_RelationshipCM_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DISABLES the RelationshipCampaignMembers.trigger (CampaignMember, after insert, after update) 
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</description>
        <inlineHelpText>DISABLES the RelationshipCampaignMembers.trigger (CampaignMember, after insert, after update) 
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_RelationshipCM_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_RelationshipContacts_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DISABLES the RelationshipContacts.trigger (Contact, after delete)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP.  FOR ADVANCED CONSULTANT AND DEVELOPERS ONLY.</description>
        <inlineHelpText>DISABLES the RelationshipContacts.trigger (Contact, after delete)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP.  FOR ADVANCED CONSULTANT AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_RelationshipContacts_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_Relationships_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DISABLES the Relationships.trigger (Relationship__c, before insert, before update, before delete, after insert, after update, after delete, after undelete)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP.  FOR ADVANCED CONSULTANT AND DEVELOPERS ONLY.</description>
        <inlineHelpText>DISABLES the Relationships.trigger (Relationship__c, before insert, before update, before delete, after insert, after update, after delete, after undelete)
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in y</inlineHelpText>
        <label>DISABLE_Relationships_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_Field__c</fullName>
        <description>The custom field used to define the gender of a Contact for determining reciprocal relationships</description>
        <inlineHelpText>The custom field used to define the gender of a Contact for determining reciprocal relationships</inlineHelpText>
        <label>Gender Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reciprocal_Method__c</fullName>
        <description>Determines method used to generate the reciprocal relationship.  Either List Setting which uses custom settings by gender (see Reciprocal Relationships tab), or Value Inversion, which inverts the type if appropriate (&quot;Parent-Child&quot; to &quot;Child-Parent&quot;)</description>
        <inlineHelpText>Determines method used to generate the reciprocal relationship.  Either List Setting which uses custom settings by gender (see Reciprocal Relationships tab), or Value Inversion, which inverts the type if appropriate (&quot;Parent-Child&quot; to &quot;Child-Parent&quot;)</inlineHelpText>
        <label>Reciprocal Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Relationship Settings</label>
</CustomObject>